--- a/css/style.scss
+++ b/css/style.scss
@@ -703,7 +703,7 @@ select{
     }
       .board-write-content{
         margin-top: 10px;
-        
+        height: 300px;
         textarea{
           width: 100% !important;
           height: 300px;
