--- a/css/style.css
+++ b/css/style.css
@@ -669,6 +669,7 @@ select {
 .main-common .main-menu > div .menus > li > ul {
   margin-left: 35px;
   font-size: 14px;
+  margin-top: 3px;
 }
 .main-common .main-menu > div .menus > li > ul li {
   margin-bottom: 10px;
