--- a/css/style.scss
+++ b/css/style.scss
@@ -424,6 +424,7 @@ select{
             >ul{
               margin-left: 35px;
               font-size: 14px;
+              margin-top:3px;
               li{
                 margin-bottom: 10px;
                 &::before{
